[project]
name = "subjective_ticker_datasource"
version = "0.1.0"
description = "Subjective data source plugin: Ticker."
requires-python = ">=3.12"
dependencies = [
  "subjective-abstract-data-source-package @ git+https://github.com/PabloBorda/subjective-abstract-data-source-package.git",
  "brainboost-data-source-logger-package @ git+https://github.com/PabloBorda/brainboost_data_source_logger_package.git",
  "brainboost-configuration-package @ git+https://github.com/PabloBorda/brainboost_configuration_package.git",
  "brainboost-rclone-oauth-package @ git+https://github.com/Subjective-Technologies/brainboost_rclone_oauth_package.git",
  "croniter>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

